--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <h1 id="homeHeading">OverTime</h1>
                 <hr>
                 <p>The only career connection service made for student-athletes.</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+                <a href="#about" class="btn btn-primary btn-xxl page-scroll">Find Out More</a>
             </div>
         </div>
     </header>
