--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">OverTime</h1>
-                <hr>
+                <h1>OverTime</h1>
+                <br />
                 <p>The only career connection service made for student-athletes.</p>
                 <a href="#about" class="btn btn-primary btn-xxl page-scroll">Find Out More</a>
             </div>
@@ -83,7 +83,7 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">What is OverTime?</h2>
                     <hr class="light">
-                    <p>For student-athletes searching for a job coming out of college, OverTime provides the only connection service tailored specifically to student athletes. It will allow student athletes to find a former student-athlete mentor to ease the transition coming out of college.</p>
+                    <p>OverTime provides the only multi-platform career connection service tailored specifically to student-athletes. They will utilize this application to find job and mentorship opportunities, which will ease their transitions out of college.</p>
                     <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Features</a>
                 </div>
             </div>
