Added separate sign up buttons for students and recruiters

--- a/index.html
+++ b/index.html
@@ -141,9 +141,12 @@
                     <hr class="primary">
                     <p>Click to sign up so that you'll be the first to hear when OverTime launches. Send us feedback so we can incorporate your ideas!</p>
                 </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                  <a href="http://www.google.com" class="page-scroll btn btn-default btn-xl sr-button">Sign Up</a>
-                </div>
+            </div>
+            <div class = "row">
+              <div class="col-lg-8 col-lg-offset-2 text-center">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSd1SUVWkZ2UWvb9kb1s-QzQwA54vWUHz_hY0A7MZTBG3vnrgw/viewform?usp=sf_link" target="_blank" class="page-scroll btn btn-default btn-xl sr-button signupButton">Sign up as a Student</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdFAwtL2luQiXQD_Yjc5nPReN-ztWzpru8cJ7VcjplYW62nNw/viewform?usp=sf_link" target="_blank" class="page-scroll btn btn-default btn-xl sr-button signupButton">Sign up as a Recruiter</a>
+              </div>
             </div>
         </div>
     </section>
